--- a/Example/Podfile
+++ b/Example/Podfile
@@ -5,9 +5,5 @@ target 'Example' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
 
-  pod 'Texture'
-  pod 'RxSwift'
-  pod 'RxCocoa'
-  pod 'Differentiator'
-
+  pod 'RxASDataSources', :path => '../'
 end
